# app-desk-musica

./: .gitignore  index.html  package-lock.json  package.json  tmp-mobile-web-player.js  tsconfig.app.json  vite.config.ts
SpotiFLAC-main/: .gitignore
SpotiFLAC-main/backend/: musicbrainz.go  songlink.go  spotfetch_api.go  tidal.go
SpotiFLAC-main/bridge/: main.go
SpotiFLAC-main/frontend/: package-lock.json  package.json  vite.config.ts
mobile-app/: capacitor.config.ts  index.html  package-lock.json  package.json  replace_icons.cjs  test.cjs  vite.config.ts
mobile-app/dist-20260408-artist-album-playlist-tune/: index.html
music-server/: .env.example  Cargo.toml  README.md
music-server/src/: auth.rs  catalog.rs  config.rs  desktop_data.rs  main.rs  state.rs
music-server/src/routes/: app_data.rs  browse.rs  health.rs  library.rs  mod.rs
src/: App.vue  main.ts  style.css  useAppLogic.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: core.toml  spotiflac.toml
src-tauri/src/: lib.rs
src-tauri/src/spotiflac/: commands.rs  metadata_compat.rs  mod.rs
src-tauri/target-checky6sx7n/: .rustc_info.json
src-tauri/target-checky6sx7n/debug/.fingerprint/cfg-if-670220cd55836517/: output-lib-cfg_if
src-tauri/target-checky6sx7n/debug/.fingerprint/icu_normalizer_data-dae541b0fcc93194/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/icu_properties_data-5c3190be730d0fbc/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/proc-macro2-eab3a148a4179ffb/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/quote-435fa7b2c1d63305/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/serde-b0d51295ea111b64/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/serde_core-a30db06b344c31ba/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/serde_core-ea6b719a9e332c1e/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/siphasher-10aa3fd852c5d814/: output-lib-siphasher
src-tauri/target-checky6sx7n/debug/.fingerprint/siphasher-f61a0b6659be76bb/: output-lib-siphasher
src-tauri/target-checky6sx7n/debug/.fingerprint/smallvec-c681ab5e13146c02/: output-lib-smallvec
src-tauri/target-checky6sx7n/debug/.fingerprint/stable_deref_trait-586a2a78ef3dd7c6/: output-lib-stable_deref_trait
src-tauri/target-checky6sx7n/debug/.fingerprint/thiserror-3885c0891c9a256c/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/unicode-ident-aee44922ab25625e/: output-lib-unicode_ident
src-tauri/target-checky6sx7n/debug/.fingerprint/zerocopy-e50339da5ca5656d/: output-build-script-build-script-build
src-tauri/target-checky6sx7n/debug/.fingerprint/zmij-42d0d62ba1780813/: output-build-script-build-script-build
src/styles/: app.css
(+2314 files in other folders)
