[package]
name = "music-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
lofty = "0.23.3"
mime_guess = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4", "v5"] }
walkdir = "2.5"
