[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"

# LOFTY (Para leer metadatos)
lofty = "0.23.3"

# PARA PORTADAS EN BASE64
base64 = "0.22"

# === NUEVO MOTOR DE AUDIO PRO ===
# CPAL: Para conectarse a la tarjeta de sonido (WASAPI, ALSA, CoreAudio)
cpal = "0.15"
# Symphonia: Para decodificación pura y saltos (seek) instantáneos
symphonia = { version = "0.5.3", features = ["all"] }
# Crossbeam: Para la comunicación ultrarrápida entre Tauri y el hilo de audio
crossbeam-channel = "0.5"
