[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-shell = "2"

# LOFTY
lofty = "0.23.3"

# BASE64
base64 = "0.22"

# SQLITE CACHE
rusqlite = { version = "0.37", features = ["bundled"] }

# AUDIO
cpal = "0.15"
symphonia = { version = "0.5.3", features = ["all"] }
crossbeam-channel = "0.5"

# BIBLIOTECA
walkdir = "2.3"
notify = "6.1"

# === INTEGRACIÓN SPOTIFLAC NATUVO ===
spotiflac-core-rs = { path = "../spotiflac-core-rs" }
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
windows = { version = "0.61.3", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
